# egfractal

./: .gitignore  COPYING  Makefile.am  README  cleanup.sh  configure.ac  how-it-works.txt  run.sh
bbrot2/: Makefile.am  bbrot2.h  bbrot_thread.c  main.c
buddhabrot1/: Makefile.am  main.c
burnship1/: Makefile.am  main.c  run.sh
examples/: Makefile.am  dots.c  dragon.c  mbrot2.c  mbrot2.sh  playpen.c  radial.c  random.c  sierpinski.c
include/: complex_helpers.h  fractal_common.h  pxbuf.h
julia1/: Makefile.am  julia1_common.h  main.c  palette.c  parse_args.c  run.sh
lib/: Makefile.am  bmp_print.c  complex.c  convolve.c  formulas.c  pxbuf.c
mandelbrot/: Makefile.am  main.c  mandelbrot.c  mandelbrot.h  mandelbrot_common.h  mandelbrot_functions.c  palette.c  pallette.c  parse_args.c  run.sh
mbrot2/: Makefile.am  main.c  mandelbrot_common.h  mbrot_thread.c  palette.c  parse_args.c
random/: Makefile.am
