examples_cppflags = -I$(top_srcdir)/include -Wall
bin_PROGRAMS = \
    dots \
    random \
    playpen
LDADD = $(top_srcdir)/lib/libfractal.a
dots_SOURCES = dots.c
random_SOURCES = random.c
playpen_SOURCES = playpen.c
dots_CPPFLAGS = $(examples_cppflags)
random_CPPFLAGS = $(examples_cppflags)
playpen_CPPFLAGS = $(examples_cppflags)

